cluster/apps/mail/mailu/mailu-admin-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mailu-admin-ingress
  namespace: mail
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: "mailu.${SECRET_DOMAIN}"
    http:
      paths:
      - path: "/admin"
        backend:
          serviceName: mailu-front
          servicePort: 80
