cluster/apps/mail/mailu/mailu-web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailu-web-ingress
  namespace: mail
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    external-dns.alpha.kubernetes.io/target: "${SECRET_GATEWAY}"
    external-dns/is-public: "true"
    nginx.ingress.kubernetes.io/auth-url: http://authelia.networking.svc.cluster.local/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}
spec:
  ingressClassName: nginx
  rules:
  - host: "mailu.${SECRET_DOMAIN}"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: mailu-front
            port:
              number: 80
