cluster/apps/mail/mailu/roundcube-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailu-roundcube-ingress
  namespace: mail
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: "roundcube.${SECRET_DOMAIN}"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: mailu-front
            port: 
              number: 80
